--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,7 @@
   justify-content: space-between;
   margin: 0;
   align-items: center;
-  width: 80%; 
+  width:80%; 
   min-width: 784px;
 }
 
@@ -148,9 +148,7 @@
   padding: 0;
   width: 60%;
   text-align: center;
-  line-height: 69px;
   font-size: 60px;
-  font-weight: bold;
   z-index: 2;
   line-height:1.15;
   font-weight:600px;
@@ -249,11 +247,10 @@
   font-weight:normal;
   text-decoration: none;
   position: absolute;
-  right: 0px;
   align-self: center;
   color:#2f80ed;
   top:50%;
-  right:48px;
+  right:0;
   }
 
   .kaufman {
@@ -320,8 +317,96 @@
 
   .section-subtitle_theme_dark {
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  z-index: 1;
+  }
+
+  .table__cell_theme_dark {
+  width:200px;
+  color: white
+  margin-right:0;
+  margin-top:80px;
+  }
+
+.table_theme_dark {
+  color: #FFF;
+  }
+
+.table__text:last-child {
+  margin-bottom: 0;
+}
+
+.table__heading_theme_dark {
+  color: #FFF;
+}
+
+.footer {
+  min-height: 350px;
+  background-color: #1f1f1f;
+  color: #FFF;
+  justify-content: center;
+  display: flex;
+}
+
+.footer__columns {
+  width: 90%;
+  display: flex;
+  margin: 60px 0 40px;
+  justify-content: space-between;
+  position: relative;
+  }
+
+.footer__column_content_copyright {
+  flex-direction: column;
+  flex-basis: 711px;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+
+.logo_place_footer {
+  width:228px;
+  height:32px;
+}
+
+.footer__column-heading {
+  margin: 0;
+  padding: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer__column-links {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__column-link {
+  color: #FFF;
+  font-weight: normal;
+  line-height: 30px;
+  font-size: 18px;
+  text-decoration: none; 
+}
+
+.footer__column_content_social {
+  margin: 0;
+  padding-right: 0px;
+  
 }
 
 .footer__column_content_info {
@@ -332,3 +417,4 @@
 .footer__social-icon {
   padding-right: 20px;
 }
+
