--- a/styles/style.css
+++ b/styles/style.css
@@ -263,17 +263,6 @@
   padding: 90px 0;
   }
 
-  .table {
-  width: 1100px;
-  margin: 0 auto;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  z-index: 1;
-  }
-
   .kaufman__triangle {
   background-image: url(../images/kaufman-triangle.svg);
   right: -210px;
@@ -286,16 +275,12 @@
   background-origin: border-box;
   }
 
-  .table__heading {
-  line-height:1.15;
-  font-size:24px;
-  font-weight:600px;
-  }
  
-  .table__text {
-  line-height:1.2;
-  font-size:18px;
-  font-weight:normal;
+  .table__text_theme_dark {
+    color: white;
+    line-height:1.2;
+    font-size:18px;
+    font-weight:normal;
   }
 
   .section-title_theme_dark {
@@ -323,14 +308,22 @@
 
 .table_theme_dark {
   color: #FFF;
+  width: 1100px;
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  z-index: 1;
   }
 
-.table__text:last-child {
-  margin-bottom: 0;
-}
 
 .table__heading_theme_dark {
   color: #FFF;
+  line-height:1.15;
+  font-size:24px;
+  font-weight:600px;
 }
 
 .footer {
