--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
@@ -22,42 +22,45 @@
 
 .logo_place_header {
   position: absolute;
-  top:30px;
-  left:64px;
-  width:228px;
-  height:32px;
+  top: 30px;
+  left: 64px;
+}
+
+.logo {
+  width: 228px;
+  height: 32px;
 }
 
 .header__title {
-  font-size:102px;
-  width:730px;
-  align-self:center;
-  font-weight:600px;
-  line-height:96px;
-  z-index:1;
-  margin-left:64px;
-
+  font-size: 102px;
+  max-width: 730px;
+  align-self: center;
+  font-weight: 600px;
+  line-height: 96px;
+  z-index: 1;
+  margin: 0 0 0 64px;
 }
- .header__subtitle {
+
+.header__subtitle {
   position: absolute;
   width: 388px;
-  font-weight:normal;
-  line-height:25px;
-  font-size:18px;
-  z-index:1;
-  margin-left:64px;
+  font-weight: normal;
+  line-height: 25px;
+  font-size: 18px;
+  z-index: 1;
+  margin: 0 0 0 64px;
   align-self: flex-end;
+  bottom: 30px;
 }
 
-  .header-link {
-    font-weight:normal;
-    line-height:25px;
-    font-size:18px;
-    bottom:30px;
-    text-decoration: none;
-    color: #2f80ed;
-
-  }
+.header__link {
+  font-weight: normal;
+  line-height: 25px;
+  font-size: 18px;
+  bottom: 30px;
+  text-decoration: none;
+  color: #2f80ed;
+}
 
 .main-illustration {
   z-index: 2;
@@ -66,16 +69,16 @@
   position: absolute;
   right: 0;
   bottom: 0;
-}  
+}
 
 .header__square-pic {
-  position:absolute;
-  height:568px;
-  width:568px;
-  top:64px;
-  right:0px;
+  position: absolute;
+  height: 568px;
+  width: 568px;
+  top: 64px;
+  right: 0px;
   bottom: 0px;
-  background-color:#2f80ed;
+  background-color: #2f80ed;
   z-index: 1;
 }
 
@@ -83,32 +86,27 @@
   display: flex;
   justify-content: center;
   margin-top: 100px;
-  margin-bottom: 100px;
 }
 
- .two-columns {
+.two-columns {
   display: flex;
   justify-content: space-between;
   margin: 0;
   align-items: center;
-  width:80%;
+  width: 80%;
   min-width: 784px;
 }
 
- .two-columns__brief {
- max-width:175px;
- width: 100%;
- font-weight:normal;
- align-self: stretch;
- line-height:1.2;
- font-size:18px;
- color:#2f80ed;
- margin: 0px;
- bottom: 0px;
-}
-
-.two-columns__brief:nth-of-type(2n) {
-  margin-right: 0;
+.two-columns__brief {
+  max-width: 175px;
+  width: 100%;
+  font-weight: normal;
+  align-self: stretch;
+  line-height: 1.2;
+  font-size: 18px;
+  color: #2f80ed;
+  margin: 0px;
+  bottom: 0px;
 }
 
 .two-columns__paragraph {
@@ -131,7 +129,7 @@
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
-  flex-direction: column; 
+  flex-direction: column;
 }
 
 .digits {
@@ -150,8 +148,8 @@
   text-align: center;
   font-size: 60px;
   z-index: 2;
-  line-height:1.15;
-  font-weight:600px;
+  line-height: 1.15;
+  font-weight: 600px;
 }
 
 .section-subtitle {
@@ -187,11 +185,11 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-  font-weight:600px;
+  font-weight: 600px;
 }
 
 .table__text {
-  margin: 20px 0;
+  margin-top: 20px;
   padding: 0;
   line-height: 1.2;
   font-size: 18px;
@@ -203,57 +201,57 @@
   margin-bottom: 0;
 }
 
-.feiman {
-  height:890px;
+.feynman {
+  min-height: 890px;
   background-color: #f2f2f2;
   position: relative;
-  align-items:center;
-  flex-direction:column;
+  align-items: center;
+  flex-direction: column;
   display: flex;
 }
 
-.feiman__title {
-  line-height:1.15;
-    font-size:120px;
-    z-index:1;
-    font-weight:normal;
-    font-weight:600px;
-    text-align: center;
-    width: 648px;
-    margin-top: 100px;  
-  }
+.feynman__title {
+  line-height: 1.15;
+  font-size: 120px;
+  z-index: 1;
+  font-weight: normal;
+  font-weight: 600;
+  text-align: center;
+  width: 648px;
+  margin: 100px 0 0 0;
+}
 
-  .feiman__subtitle {
-    margin-top:70px;
-    line-height:51px;
-    font-size:36px;
-    font-weight:normal;
-    text-align: center;
-    z-index:1;
-    margin: 0; 
-  }
-  
-  .feiman-illustration {
+.feynman__subtitle {
+  margin: 70px 0 0 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+  z-index: 1;
+}
+
+.feynman__illustration {
   position: absolute;
   width: 867px;
   height: 637px;
   align-self: flex-start;
   bottom: 0px;
-  }
+  left: 0px;
+}
 
-  .feiman-link {
-  line-height:51px;
-  font-size:36px;
-  font-weight:normal;
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
   text-decoration: none;
   position: absolute;
   align-self: center;
-  color:#2f80ed;
-  top:50%;
-  right:0;
-  }
+  color: #2f80ed;
+  top: 50%;
+  right: 48;
+}
 
-  .kaufman {
+.kaufman {
   position: relative;
   display: flex;
   overflow: hidden;
@@ -261,9 +259,9 @@
   flex-direction: column;
   align-items: center;
   padding: 90px 0;
-  }
+}
 
-  .kaufman__triangle {
+.kaufman__triangle {
   background-image: url(../images/kaufman-triangle.svg);
   right: -210px;
   width: 877px;
@@ -273,63 +271,55 @@
   position: absolute;
   overflow: hidden;
   background-origin: border-box;
-  }
+}
 
- 
-  .table__text_theme_dark {
-    color: white;
-    line-height:1.2;
-    font-size:18px;
-    font-weight:normal;
-  }
+.table__text_theme_dark {
+  color: white;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
 
-  .section-title_theme_dark {
+.section-title_theme_dark {
   color: white;
   z-index: 1;
-  line-height:1.15;
-  font-size:60px;
-  font-weight:600px;
-  }
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
 
-  .section-subtitle_theme_dark {
+.section-subtitle_theme_dark {
   color: white;
   z-index: 1;
-  line-height:34px;
-  font-size:24px;
-  font-weight:normal;
-  }
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
 
-  .table__cell_theme_dark {
-  width:200px;
+.table__cell_theme_dark {
+  width: 200px;
   color: white;
-  margin-right:0;
-  margin-top:80px;
-  }
+  margin-right: 0;
+  margin-top: 80px;
+}
 
 .table_theme_dark {
-  color: #FFF;
-  width: 1100px;
-  margin: 0 auto;
-  padding: 0;
+  color: #fff;
   list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   z-index: 1;
-  }
-
+}
 
 .table__heading_theme_dark {
-  color: #FFF;
-  line-height:1.15;
-  font-size:24px;
-  font-weight:600px;
+  color: #fff;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600px;
 }
 
 .footer {
   min-height: 350px;
   background-color: #1f1f1f;
-  color: #FFF;
+  color: #fff;
   justify-content: center;
   display: flex;
 }
@@ -340,14 +330,13 @@
   margin: 60px 0 40px;
   justify-content: space-between;
   position: relative;
-  }
+}
 
 .footer__column_content_copyright {
   flex-direction: column;
   flex-basis: 711px;
   display: flex;
   justify-content: space-between;
-
 }
 
 .footer__author {
@@ -359,8 +348,8 @@
 }
 
 .logo_place_footer {
-  width:228px;
-  height:32px;
+  width: 228px;
+  height: 32px;
 }
 
 .footer__column-heading {
@@ -383,25 +372,24 @@
 }
 
 .footer__column-link {
-  color: #FFF;
+  color: #fff;
   font-weight: normal;
   line-height: 30px;
   font-size: 18px;
-  text-decoration: none; 
+  text-decoration: none;
 }
 
 .footer__column_content_social {
   margin: 0;
   padding-right: 0px;
-  
 }
 
 .footer__column_content_info {
   margin: 0;
-  
 }
 
 .footer__social-icon {
-  padding-right: 20px;
+  padding-right: 10px;
+  width: 16px;
+  height: 16px;
 }
-
