--- a/pages/index.css
+++ b/pages/index.css
@@ -18,3 +18,16 @@
 @import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/resources/resources.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/description/description.css);
+@import url(../blocks/feynman/__illustration/feynman__illustration.css);
+@import url(../blocks/footer/__social-icon/footer__social-icon.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+@import url(../blocks/table/__text/_theme/table__text_theme_dark.css);
+@import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
+@import url(../blocks/video/video__iframes/video__iframes.css);
