--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,7 +5,7 @@
 @import url(./__column-heading/footer__column-heading.css);
 @import url(./__column-links/footer__column-links.css);
 @import url(./__column-link/footer__column-link.css);
-
+@import url(./__social-icon/footer__social-icon.css);
 
 .footer {
   min-height: 350px;
