--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -6,7 +6,7 @@
   color: #2f80ed;
   transition: opacity 0.3s ease;
   margin-left: 48px;
-  align-self: flex-start
+  align-self: flex-start;
 }
 
 .khan__buy-link:hover {
